Use new LearningPath model for Fields (#196)
