# channels_fields/views.py
@@ -3,6 +3,7 @@
 import logging
 
 from django.contrib.auth.models import User
+from drf_spectacular.utils import extend_schema, extend_schema_view
 from rest_framework import mixins, viewsets
 from rest_framework.generics import ListCreateAPIView
 from rest_framework.response import Response
@@ -24,6 +25,26 @@ from learning_resources.views import LargePagination
 log = logging.getLogger(__name__)
 
 
+def extend_schema_responses(serializer):
+    """
+    Specify a serializer for all view **responses** when generating OpenAPI schema
+    via drf-spectacular. The request schema will be inferred as usual.
+    """
+
+    def decorate(view):
+        extend_schema_view(
+            list=extend_schema(responses={200: serializer}),
+            retrieve=extend_schema(responses={200: serializer}),
+            create=extend_schema(responses={201: serializer}),
+            update=extend_schema(responses={200: serializer}),
+            partial_update=extend_schema(responses={200: serializer}),
+        )(view)
+        return view
+
+    return decorate
+
+
+@extend_schema_responses(FieldChannelSerializer)
 class FieldChannelViewSet(
     mixins.ListModelMixin,
     mixins.RetrieveModelMixin,
@@ -33,7 +54,8 @@ class FieldChannelViewSet(
     viewsets.GenericViewSet,
 ):
     """
-    Viewset for Field Channels
+    CRUD Operations related to Fields. Fields may represent groups or organizations
+    at MIT and are a high-level categorization of content.
     """
 
     pagination_class = LargePagination
@@ -44,7 +66,7 @@ class FieldChannelViewSet(
     def get_queryset(self):
         """Return a queryset"""
         return FieldChannel.objects.all().prefetch_related(
-            "subfields", "subfields__field_channel", "lists", "featured_list"
+            "subfields", "subfields__field_channel"
         )
 
     def get_serializer_class(self):
