# openapi.yaml
@@ -1,8 +1,8 @@
 openapi: 3.0.3
 info:
-  title: MIT Open Discussions Course Catalog API
+  title: MIT Open API
   version: 0.0.1
-  description: Open Discussions public API
+  description: MIT public API
 paths:
   /api/v1/articles/:
     get:
@@ -1028,6 +1028,252 @@ paths:
               schema:
                 $ref: '#/components/schemas/PaginatedLearningResourceList'
           description: ''
+  /api/v1/fields/:
+    get:
+      operationId: fields_list
+      description: |-
+        CRUD Operations related to Fields. Fields may represent groups or organizations
+        at MIT and are a high-level categorization of content.
+      parameters:
+      - name: limit
+        required: false
+        in: query
+        description: Number of results to return per page.
+        schema:
+          type: integer
+      - name: offset
+        required: false
+        in: query
+        description: The initial index from which to return the results.
+        schema:
+          type: integer
+      tags:
+      - fields
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/PaginatedFieldChannelList'
+          description: ''
+    post:
+      operationId: fields_create
+      description: |-
+        CRUD Operations related to Fields. Fields may represent groups or organizations
+        at MIT and are a high-level categorization of content.
+      tags:
+      - fields
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FieldChannelCreateRequest'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/FieldChannelCreateRequest'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/FieldChannelCreateRequest'
+        required: true
+      security:
+      - cookieAuth: []
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FieldChannel'
+          description: ''
+  /api/v1/fields/{field_name}/:
+    get:
+      operationId: fields_retrieve
+      description: |-
+        CRUD Operations related to Fields. Fields may represent groups or organizations
+        at MIT and are a high-level categorization of content.
+      parameters:
+      - in: path
+        name: field_name
+        schema:
+          type: string
+        required: true
+      tags:
+      - fields
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FieldChannel'
+          description: ''
+    put:
+      operationId: fields_update
+      description: |-
+        CRUD Operations related to Fields. Fields may represent groups or organizations
+        at MIT and are a high-level categorization of content.
+      parameters:
+      - in: path
+        name: field_name
+        schema:
+          type: string
+        required: true
+      tags:
+      - fields
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FieldChannelWriteRequest'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/FieldChannelWriteRequest'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/FieldChannelWriteRequest'
+        required: true
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FieldChannel'
+          description: ''
+    patch:
+      operationId: fields_partial_update
+      description: |-
+        CRUD Operations related to Fields. Fields may represent groups or organizations
+        at MIT and are a high-level categorization of content.
+      parameters:
+      - in: path
+        name: field_name
+        schema:
+          type: string
+        required: true
+      tags:
+      - fields
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PatchedFieldChannelWriteRequest'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/PatchedFieldChannelWriteRequest'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/PatchedFieldChannelWriteRequest'
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FieldChannel'
+          description: ''
+    delete:
+      operationId: fields_destroy
+      description: |-
+        CRUD Operations related to Fields. Fields may represent groups or organizations
+        at MIT and are a high-level categorization of content.
+      parameters:
+      - in: path
+        name: field_name
+        schema:
+          type: string
+        required: true
+      tags:
+      - fields
+      security:
+      - cookieAuth: []
+      responses:
+        '204':
+          description: No response body
+  /api/v1/fields/{field_name}/moderators/:
+    get:
+      operationId: fields_moderators_list
+      description: View for listing and adding moderators
+      parameters:
+      - in: path
+        name: field_name
+        schema:
+          type: string
+          pattern: ^[A-Za-z0-9_]+$
+        required: true
+      tags:
+      - fields
+      security:
+      - cookieAuth: []
+      responses:
+        '200':
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/FieldModerator'
+          description: ''
+    post:
+      operationId: fields_moderators_create
+      description: View for listing and adding moderators
+      parameters:
+      - in: path
+        name: field_name
+        schema:
+          type: string
+          pattern: ^[A-Za-z0-9_]+$
+        required: true
+      tags:
+      - fields
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FieldModeratorRequest'
+          application/x-www-form-urlencoded:
+            schema:
+              $ref: '#/components/schemas/FieldModeratorRequest'
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/FieldModeratorRequest'
+      security:
+      - cookieAuth: []
+      responses:
+        '201':
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/FieldModerator'
+          description: ''
+  /api/v1/fields/{field_name}/moderators/{moderator_name}/:
+    delete:
+      operationId: fields_moderators_destroy
+      description: Remove the user from the moderator groups for this website
+      parameters:
+      - in: path
+        name: field_name
+        schema:
+          type: string
+          pattern: ^[A-Za-z0-9_]+$
+        required: true
+      - in: path
+        name: moderator_name
+        schema:
+          type: string
+          pattern: ^[A-Za-z0-9_]+$
+        required: true
+      tags:
+      - fields
+      security:
+      - cookieAuth: []
+      responses:
+        '204':
+          description: No response body
   /api/v1/learning_resources/:
     get:
       operationId: learning_resources_list
@@ -2974,15 +3220,6 @@ paths:
               schema:
                 $ref: '#/components/schemas/PaginatedLearningResourceList'
           description: ''
-  /api/v1/ocw_next_webhook/:
-    post:
-      operationId: ocw_next_webhook_create
-      description: Process webhook request
-      tags:
-      - ocw_next_webhook
-      responses:
-        '200':
-          description: No response body
   /api/v1/podcast_episodes/:
     get:
       operationId: podcast_episodes_list
@@ -5537,6 +5774,202 @@ components:
           type: object
           additionalProperties: {}
           nullable: true
+    FieldChannel:
+      type: object
+      description: Serializer for FieldChannel
+      properties:
+        name:
+          type: string
+          readOnly: true
+        title:
+          type: string
+          readOnly: true
+        about:
+          type: object
+          additionalProperties: {}
+          readOnly: true
+          nullable: true
+        public_description:
+          type: string
+          readOnly: true
+        subfields:
+          type: array
+          items:
+            $ref: '#/components/schemas/Subfield'
+          readOnly: true
+        featured_list:
+          allOf:
+          - $ref: '#/components/schemas/LearningPathPreview'
+          readOnly: true
+          description: Learning path featured in this field.
+        lists:
+          type: array
+          items:
+            $ref: '#/components/schemas/LearningPathPreview'
+          readOnly: true
+        avatar:
+          type: string
+          description: Get the avatar image URL
+        avatar_medium:
+          type: string
+          description: Get the avatar image medium URL
+          readOnly: true
+        avatar_small:
+          type: string
+          description: Get the avatar image small URL
+          readOnly: true
+        banner:
+          type: string
+          description: Get the banner image URL
+        widget_list:
+          type: integer
+          readOnly: true
+          nullable: true
+        updated_on:
+          type: string
+          format: date-time
+          readOnly: true
+        created_on:
+          type: string
+          format: date-time
+          readOnly: true
+        id:
+          type: integer
+          readOnly: true
+        ga_tracking_id:
+          type: string
+          readOnly: true
+          nullable: true
+        is_moderator:
+          type: boolean
+          description: Return true if user is a moderator for the channel
+          readOnly: true
+      required:
+      - about
+      - avatar_medium
+      - avatar_small
+      - created_on
+      - featured_list
+      - ga_tracking_id
+      - id
+      - is_moderator
+      - lists
+      - name
+      - public_description
+      - subfields
+      - title
+      - updated_on
+      - widget_list
+    FieldChannelCreateRequest:
+      type: object
+      description: |-
+        Write serializer for FieldChannel. Uses primary keys for referenced objects
+        during requests, and delegates to FieldChannelSerializer for responses.
+      properties:
+        name:
+          type: string
+          minLength: 1
+          pattern: ^[A-Za-z0-9_]+$
+          maxLength: 100
+        title:
+          type: string
+          minLength: 1
+          maxLength: 100
+        public_description:
+          type: string
+        subfields:
+          type: array
+          items:
+            type: string
+            minLength: 1
+        featured_list:
+          type: integer
+          nullable: true
+          description: Learng path featured in this field.
+        lists:
+          type: array
+          items:
+            type: integer
+            nullable: true
+          description: Learng paths in this field.
+        avatar:
+          type: string
+          format: binary
+          nullable: true
+        banner:
+          type: string
+          format: binary
+          nullable: true
+        about:
+          type: object
+          additionalProperties: {}
+          nullable: true
+      required:
+      - name
+      - title
+    FieldChannelWriteRequest:
+      type: object
+      description: Similar to FieldChannelCreateSerializer, with read-only name
+      properties:
+        title:
+          type: string
+          minLength: 1
+          maxLength: 100
+        public_description:
+          type: string
+        subfields:
+          type: array
+          items:
+            type: string
+            minLength: 1
+        featured_list:
+          type: integer
+          nullable: true
+          description: Learng path featured in this field.
+        lists:
+          type: array
+          items:
+            type: integer
+            nullable: true
+          description: Learng paths in this field.
+        avatar:
+          type: string
+          description: Get the avatar image URL
+        banner:
+          type: string
+          description: Get the banner image URL
+        about:
+          type: object
+          additionalProperties: {}
+          nullable: true
+      required:
+      - title
+    FieldModerator:
+      type: object
+      description: Serializer for moderators
+      properties:
+        moderator_name:
+          type: string
+          description: Returns the name for the moderator
+        email:
+          type: string
+          description: Get the email from the associated user
+        full_name:
+          type: string
+          description: Get the full name of the associated user
+          readOnly: true
+      required:
+      - full_name
+    FieldModeratorRequest:
+      type: object
+      description: Serializer for moderators
+      properties:
+        moderator_name:
+          type: string
+          description: Returns the name for the moderator
+        email:
+          type: string
+          description: Get the email from the associated user
     LearningPath:
       type: object
       description: Serializer for the LearningPath model
@@ -5554,6 +5987,24 @@ components:
       - author
       - id
       - item_count
+    LearningPathPreview:
+      type: object
+      description: Serializer for a minimal preview of Learning Paths
+      properties:
+        title:
+          type: string
+          maxLength: 256
+        url:
+          type: string
+          format: uri
+          nullable: true
+          maxLength: 2048
+        id:
+          type: integer
+          readOnly: true
+      required:
+      - id
+      - title
     LearningPathRelationship:
       type: object
       description: Specialized serializer for a LearningPath relationship
@@ -6520,6 +6971,26 @@ components:
           type: array
           items:
             $ref: '#/components/schemas/ContentFile'
+    PaginatedFieldChannelList:
+      type: object
+      properties:
+        count:
+          type: integer
+          example: 123
+        next:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?offset=400&limit=100
+        previous:
+          type: string
+          nullable: true
+          format: uri
+          example: http://api.example.org/accounts/?offset=200&limit=100
+        results:
+          type: array
+          items:
+            $ref: '#/components/schemas/FieldChannel'
     PaginatedLearningPathRelationshipList:
       type: object
       properties:
@@ -6670,6 +7141,41 @@ components:
           type: string
           minLength: 1
           maxLength: 255
+    PatchedFieldChannelWriteRequest:
+      type: object
+      description: Similar to FieldChannelCreateSerializer, with read-only name
+      properties:
+        title:
+          type: string
+          minLength: 1
+          maxLength: 100
+        public_description:
+          type: string
+        subfields:
+          type: array
+          items:
+            type: string
+            minLength: 1
+        featured_list:
+          type: integer
+          nullable: true
+          description: Learng path featured in this field.
+        lists:
+          type: array
+          items:
+            type: integer
+            nullable: true
+          description: Learng paths in this field.
+        avatar:
+          type: string
+          description: Get the avatar image URL
+        banner:
+          type: string
+          description: Get the banner image URL
+        about:
+          type: object
+          additionalProperties: {}
+          nullable: true
     PatchedLearningPathRelationshipRequest:
       type: object
       description: Specialized serializer for a LearningPath relationship
@@ -6904,6 +7410,23 @@ components:
       - count
       - metadata
       - results
+    Subfield:
+      type: object
+      description: Serializer for Subfields
+      properties:
+        parent_field:
+          type: string
+          readOnly: true
+        field_channel:
+          type: string
+          readOnly: true
+        position:
+          type: integer
+          maximum: 2147483647
+          minimum: -2147483648
+      required:
+      - field_channel
+      - parent_field
     UserList:
       type: object
       description: Simplified serializer for UserList model.
